2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-wireless.[ch] (gst_iface_wireless_new_from_xml):
	get the parent class configuration before checking that it's
	configured

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* address-list.[ch], gst-network-tool.[ch], ifaces-list.[ch],
	network-iface.[ch], network-iface-ethernet.[ch],
	network-iface-irlan.[ch], network-iface-plip.[ch],
	network-iface-wireless.[ch]: Added files for the new network tool

	* callbacks.[ch], connection.[ch], main.c, transfer.[ch], Makefile.am: 
	Modified files for the new network tool

	* dns.[ch], hosts.[ch], network-druid.[ch], profile.[ch],
	profiles-table.[ch]: deleted files, any missing functionality will be
	reimplemented

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.[ch], main.c, network-druid.c, profile.c: Patch by
	Vincent Untz <vincent@vuntz.net> to add WEP keys management
        to the UI. Fixes #147260

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c: changed the string to delete an interface, fixes
	#154830

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2004-08-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.91.0

2004-08-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c: fixed a serious and quite silly bug when storing the
	default gatewaydev. I'm dumb

2004-08-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* transfer.c: little UI improvement, made the default gateway stuff
	appear if it's necessary, and not dissappear if it's not necessary,
	it seems a more correct behavior

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.90

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* callbacks.c: specified the help sections
