@@ -1,4 +1,3 @@
-- complete the gateway stuff
 - complete the hosts stuff
 - complete the locations stuff
 - add modem devices
