@@ -47,5 +47,6 @@ GtkTreeView*  ifaces_list_create                   (void);
 void          ifaces_list_setup_popup              (GtkWidget*);
 
 GtkComboBox*  gateways_combo_create                (void);
+void          gateways_combo_select                (gchar*);
 
 #endif /* __IFACES_LIST_H */
