@@ -1,3 +1,7 @@
+2004-11-09  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* ifaces-list.[ch], transfer.c: update the gatewaydev from the XML
+
 2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network-iface-wireless.[ch] (gst_iface_wireless_new_from_xml):
